# PROJECT(matc C) CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

file(GLOB SOURCES "src/*.c")
# MESSAGE(STATUS "SOURCES: ${SOURCES}")

if(NOT (WITH_ELMERGUI))
  add_library(matc ${SOURCES})
  install(
    TARGETS matc
    RUNTIME DESTINATION "bin"
    LIBRARY DESTINATION "lib"
    ARCHIVE DESTINATION "lib" COMPONENT "elmergui")
endif()
